load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "semaphore",
    hdrs = ["semaphore.h"],
    srcs = ["semaphore.cc"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "threadsafe_queue",
    hdrs = ["threadsafe_queue.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "threadpool",
    hdrs = ["threadpool.h"],
    srcs = ["threadpool.cc"],
    visibility = ["//visibility:public"],
    deps = ["threadsafe_queue"]
)

cc_library(
    name = "delay_queue",
    hdrs = ["delay_queue.h"],
    visibility = ["//visibility:public"],
    deps = ["//src:semaphore"]
)
