load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "delayqueue_small_unit_test",
    srcs = ["delayqueue_small_unit_test.cc"],
    size = "small",
    deps = [
      "//src:delay_queue",  
      "@com_google_test//:gtest_main",
    ],
)

cc_test(
    name = "delayqueue_timecheck_unit_test",
    srcs = ["delayqueue_timecheck_unit_test.cc"],
    size = "small",
    deps = [
      "//src:delay_queue",  
      "@com_google_test//:gtest_main",
    ],
)

cc_test(
    name = "sanity_check",
    srcs = ["sanity_check.cc"],
    args = ["--gtest_repeat=100"],
    size = "small",
    deps = [
      "//src:delay_queue",  
      "@com_google_test//:gtest_main",
    ],
)

cc_test(
    name = "threadpool_unit_test",
    srcs = ["threadpool_unit_test.cc"],
    args = ["--gtest_repeat=100"],
    size = "small",
    deps = [
      "//src:threadpool",  
      "@com_google_test//:gtest_main",
    ],
)

cc_test(
    name = "threadsafe_queue_unit_test",
    srcs = ["threadsafe_queue_unit_test.cc"],
    args = ["--gtest_repeat=100"],
    size = "small",
    deps = [
      "//src:threadsafe_queue",  
      "@com_google_test//:gtest_main",
    ],
)

cc_test(
    name = "semaphore_unit_test",
    srcs = ["semaphore_unit_test.cc"],
    deps = [
      "//src:semaphore",  
      "@com_google_test//:gtest_main",
    ],
)
